--- a/web/sites/mobile-zedbet/config/sync/core.base_field_override.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.user_id.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.base_field_override.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.user_id.yml
@@ -13,7 +13,7 @@ bundle: webcomposer_slider_v2_entity
 label: 'Authored by'
 description: 'The user ID of author of the Webcomposer slider 2.0 entity entity.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
