--- a/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_image.yml
+++ b/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_image.yml
@@ -5,8 +5,15 @@ dependencies:
   config:
     - field.storage.webcomposer_slider_v2_entity.field_banner_image
   module:
+    - content_translation
     - image
     - webcomposer_slider_v2
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
 _core:
   default_config_hash: KaeWJJV3dlD-xtsBx9X17putfZSd_E0_fwdP2vlij1Y
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_image
@@ -14,17 +21,17 @@ field_name: field_banner_image
 entity_type: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
 label: 'Banner Image'
-description: ''
+description: 'Recommended dimension of image is 767px x 376px.'
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
-  max_resolution: ''
-  min_resolution: ''
+  max_resolution: 767x376
+  min_resolution: 767x376
   alt_field: false
   alt_field_required: true
   title_field: false
