--- a/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image.yml
+++ b/web/sites/mobile-zedbet/config/sync/field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image.yml
@@ -11,9 +11,9 @@ dependencies:
 third_party_settings:
   content_translation:
     translation_sync:
-      alt: alt
-      title: title
-      file: '0'
+      file: file
+      alt: '0'
+      title: '0'
 _core:
   default_config_hash: 3Y-JKKm5B_1b2hQF77f7Cwgu5uuyxr5Py4Coc_brMZg
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image
@@ -21,7 +21,7 @@ field_name: field_post_banner_image
 entity_type: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
 label: 'Post Banner Image'
-description: ''
+description: 'Recommended dimension of image is 767px x 376px.'
 required: true
 translatable: true
 default_value: {  }
@@ -30,8 +30,8 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
-  max_resolution: ''
-  min_resolution: ''
+  max_resolution: 767x376
+  min_resolution: 767x376
   alt_field: false
   alt_field_required: true
   title_field: false
