--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -97,6 +97,9 @@ module:
   webform: 0
   webform_rest: 0
   webform_ui: 0
+  zedbet_config: 0
+  zedbet_header_config: 0
+  zedbet_urls: 0
   menu_link_content: 1
   pathauto: 1
   views: 10
