--- a/web/sites/mobile-zedbet/config/sync/core.entity_form_display.taxonomy_term.lobby_tab_live_dealer.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_form_display.taxonomy_term.lobby_tab_live_dealer.default.yml
@@ -6,24 +6,13 @@ dependencies:
     - field.field.taxonomy_term.lobby_tab_live_dealer.field_alias_ld
     - field.field.taxonomy_term.lobby_tab_live_dealer.field_label_ld
     - taxonomy.vocabulary.lobby_tab_live_dealer
-  module:
-    - path
-    - text
 id: taxonomy_term.lobby_tab_live_dealer.default
 targetEntityType: taxonomy_term
 bundle: lobby_tab_live_dealer
 mode: default
 content:
-  description:
-    type: text_textfield
-    weight: 0
-    region: content
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   field_alias_ld:
-    weight: 33
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -31,7 +20,7 @@ content:
     type: string_textfield
     region: content
   field_label_ld:
-    weight: 32
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -40,26 +29,24 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 30
+  translation:
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-  translation:
-    weight: 10
-    region: content
-hidden: {  }
+hidden:
+  description: true
+  path: true
