--- a/web/sites/zedbet/config/sync/core.extension.yml
+++ b/web/sites/zedbet/config/sync/core.extension.yml
@@ -33,13 +33,16 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  games_collection: 0
   games_config: 0
+  games_search: 0
   image: 0
   imce: 0
   lang_dropdown: 0
   language: 0
   libraries: 0
   link: 0
+  live_dealer_games_config: 0
   locale: 0
   menu_link_attributes: 0
   menu_ui: 0
