--- a/web/sites/mobile-zedbet/config/sync/views.view.games_list_live_dealer.yml
+++ b/web/sites/mobile-zedbet/config/sync/views.view.games_list_live_dealer.yml
@@ -58,23 +58,9 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: none
         options:
-          items_per_page: 10
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: serializer
       row:
@@ -264,7 +250,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - request_format
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
@@ -852,7 +837,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
         - user
         - 'user.node_grants:view'
         - user.permissions
