--- a/web/sites/zedbet/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_currency
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_enable_for_agent_players
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_image
@@ -70,6 +71,7 @@ third_party_settings:
         - field_post_banner_link_target
         - field_post_banner_blurb
         - field_post_content_position
+        - field_enable_for_agent_players
       parent_name: ''
       weight: 5
       format_type: fieldset
@@ -242,6 +244,12 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_enable_for_agent_players:
+    weight: 17
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_game_launching:
     weight: 3
     settings: {  }
@@ -256,7 +264,7 @@ content:
     type: options_buttons
     region: content
   field_post_banner_blurb:
-    weight: 16
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
@@ -358,7 +366,7 @@ content:
     type: options_select
     region: content
   field_post_content_position:
-    weight: 17
+    weight: 16
     settings: {  }
     third_party_settings:
       conditional_fields:
