--- a/web/sites/mobile-zedbet/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/mobile-zedbet/config/sync/webcomposer_config.icore_games_integration.yml
@@ -13,8 +13,8 @@ gb_virtual_sports_country: ''
 skywind_currency: ''
 skywind_language_mapping: ''
 skywind_country: ''
-voidbridge_currency: ''
-voidbridge_language_mapping: ''
+voidbridge_currency: "USD\r\nTHB\r\nTUS"
+voidbridge_language_mapping: "en|en-US\r\nth|th"
 voidbridge_country: ''
 gold_deluxe_currency: ''
 gold_deluxe_language_mapping: ''
@@ -32,7 +32,7 @@ tgp_currency: ''
 tgp_language_mapping: ''
 tgp_country: ''
 evo_gaming_currency: "USD\r\nTHB\r\nTUS"
-evo_gaming_language_mapping: "en|en-US\r\nth|th\r\n"
+evo_gaming_language_mapping: "en|en-US\r\nth|th"
 evo_gaming_country: ''
 ebet_currency: ''
 ebet_language_mapping: ''
