--- a/web/sites/zedbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.games_live_dealer.field_game_icon
     - field.field.node.games_live_dealer.field_game_image
     - field.field.node.games_live_dealer.field_game_image_large
+    - field.field.node.games_live_dealer.field_game_preview_mode
     - field.field.node.games_live_dealer.field_game_provider
     - field.field.node.games_live_dealer.field_game_ribbon
     - field.field.node.games_live_dealer.field_game_subprovider
@@ -159,6 +160,13 @@ content:
           entity_type: node
           bundle: games_live_dealer
     type: image_image
+    region: content
+  field_game_preview_mode:
+    weight: 26
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_game_provider:
     type: options_select
