--- a/web/sites/zedbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.games_live_dealer.field_game_icon
     - field.field.node.games_live_dealer.field_game_image
     - field.field.node.games_live_dealer.field_game_image_large
+    - field.field.node.games_live_dealer.field_game_preview_mode
     - field.field.node.games_live_dealer.field_game_provider
     - field.field.node.games_live_dealer.field_game_ribbon
     - field.field.node.games_live_dealer.field_game_subprovider
@@ -70,6 +71,16 @@ content:
     third_party_settings: {  }
     type: image
     region: content
+  field_game_preview_mode:
+    weight: 9
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_game_provider:
     type: entity_reference_label
     weight: 6
@@ -101,14 +112,14 @@ content:
     type: list_default
     region: content
   field_maintenance_blurb:
-    weight: 9
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_maintenance_end:
-    weight: 11
+    weight: 12
     label: above
     settings:
       format_type: medium
@@ -117,7 +128,7 @@ content:
     type: datetime_default
     region: content
   field_maintenance_start:
-    weight: 10
+    weight: 11
     label: above
     settings:
       format_type: medium
@@ -126,7 +137,7 @@ content:
     type: datetime_default
     region: content
   links:
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
