--- a/web/sites/ptplus/config/sync/views.view.games_list.yml
+++ b/web/sites/ptplus/config/sync/views.view.games_list.yml
@@ -252,7 +252,7 @@ display:
   rest_export_1:
     display_plugin: rest_export
     id: rest_export_1
-    display_title: 'REST export'
+    display_title: 'Mobile Games List'
     position: 1
     display_options:
       display_extenders: {  }
@@ -418,6 +418,7 @@ display:
       cache:
         type: none
         options: {  }
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
