--- a/web/sites/mobile-games/config/sync/views.view.duplicate_of_games_list.yml
+++ b/web/sites/mobile-games/config/sync/views.view.duplicate_of_games_list.yml
@@ -339,7 +339,7 @@ display:
               raw_output: false
             title:
               alias: ''
-              raw_output: false
+              raw_output: true
             field_game_filter_export:
               alias: field_game_filter
               raw_output: false
