--- a/web/sites/games/config/sync/views.view.games_list_2_0.yml
+++ b/web/sites/games/config/sync/views.view.games_list_2_0.yml
@@ -1748,7 +1748,7 @@ display:
           field_options:
             field_v2_game_title:
               alias: ''
-              raw_output: false
+              raw_output: true
             field_v2_game_code:
               alias: ''
               raw_output: false
