--- a/web/sites/keno/config/sync/field.field.node.games.field_game_code.yml
+++ b/web/sites/keno/config/sync/field.field.node.games.field_game_code.yml
@@ -12,7 +12,7 @@ bundle: games
 label: 'Game Code'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
