--- a/web/sites/nextbet/config/sync/user.role.anonymous.yml
+++ b/web/sites/nextbet/config/sync/user.role.anonymous.yml
@@ -13,6 +13,7 @@ permissions:
   - 'access content'
   - 'access language en'
   - 'access language id'
+  - 'access language in'
   - 'access language ko'
   - 'access language th'
   - 'access language vi'
