--- a/web/sites/mobile-nextbet/config/sync/language.entity.in.yml
+++ b/web/sites/mobile-nextbet/config/sync/language.entity.in.yml
@@ -8,7 +8,7 @@ third_party_settings:
   webcomposer_language_hierarchy:
     webcomposer_fallback_langcode: en
     webcomposer_language_hidden: 0
-    webcomposer_language_custom_label: English
+    webcomposer_language_custom_label: 'English (India)'
 id: in
 label: 'English (India)'
 direction: ltr
