--- a/web/sites/zedbet/config/sync/core.entity_form_display.node.promotion.default.yml
+++ b/web/sites/zedbet/config/sync/core.entity_form_display.node.promotion.default.yml
@@ -150,7 +150,7 @@ third_party_settings:
       children:
         - field_right_side_block_link
         - field_link_target
-        - field_summary_image
+        - field_thumbnail_image
         - field_thumbnail_summary
       parent_name: ''
       weight: 14
@@ -181,7 +181,7 @@ third_party_settings:
       children:
         - field_promotion_summary_link
         - field_promotion_link_target
-        - field_thumbnail_image
+        - field_summary_image
         - field_promotion_summary
         - field_hide_countdown
       parent_name: ''
@@ -200,7 +200,7 @@ third_party_settings:
         - field_ribbon_background_color
         - field_text_color
       parent_name: ''
-      weight: 18
+      weight: 17
       format_type: tab
       format_settings:
         id: ''
@@ -275,7 +275,7 @@ content:
     type: link_default
     region: content
   field_hide_countdown:
-    weight: 32
+    weight: 33
     settings:
       display_label: true
     third_party_settings: {  }
@@ -305,7 +305,7 @@ content:
     type: image_image
     region: content
   field_link_target:
-    weight: 18
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -339,21 +339,15 @@ content:
     region: content
   field_product:
     weight: 8
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_product_subfilter:
     weight: 9
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   field_promotion_link_target:
     weight: 29
@@ -362,7 +356,7 @@ content:
     type: options_select
     region: content
   field_promotion_summary:
-    weight: 31
+    weight: 32
     settings:
       rows: 5
       placeholder: ''
@@ -425,7 +419,7 @@ content:
     type: string_textfield
     region: content
   field_summary_image:
-    weight: 19
+    weight: 30
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -439,7 +433,7 @@ content:
     type: color_field_widget_html5
     region: content
   field_thumbnail_image:
-    weight: 30
+    weight: 18
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -447,7 +441,7 @@ content:
     type: image_image
     region: content
   field_thumbnail_summary:
-    weight: 20
+    weight: 19
     settings:
       rows: 5
       placeholder: ''
@@ -476,7 +470,7 @@ content:
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 20
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -484,7 +478,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 19
+    weight: 18
     region: content
     third_party_settings: {  }
   sticky:
@@ -518,7 +512,7 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 21
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
